sl-lsl/tests/corpus/error/undefined_function.lsl
// Calls a name that is neither a user function nor a library function.
default
{
    state_entry()
    {
        llNotARealFunction(0, "oops");
    }
}
